--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="social-links">
             <a href="mailto:contact@naox.io">Email</a>
             <a href="https://www.instagram.com/naox_io">Instagram</a>
-            <a href="https://x.com/naoxio">𝕏</a>
+            <a href="https://x.com/naox_io">𝕏</a>
             <a href="https://github.com/naoxio">GitHub</a>
             <a href="https://t.me/naoxio">Telegram</a>
         </div>
