--- a/index.html
+++ b/index.html
@@ -204,14 +204,14 @@
                 <h2>Ukuvota</h2>
                 <h3>Collaborative score voting tool</h3>
                 <p>A voting platform that empowers users with precision through weighted score voting, offers easy link sharing, fosters collaboration with a consensus-driven approach, and provides a user-friendly interface with transparent voting results.</p>
-                <a href="https://ukuvota.world" class="cta">Explore Now!</a>
+                <a href="https://ukuvota.xyz" class="cta">Explore Now!</a>
             </div>
             <div class="product">
                 <img src="inner-breeze-logo.png" alt="Inner Breeze Logo" class="product-logo">
                 <h2>Inner Breeze</h2>
                 <h3>Guided Wim Hof breathing meditation</h3>
                 <p>Find serenity in every breath with Inner Breeze. This app guides you through the Wim Hof Breathing Method with ease.</p>
-                <a href="https://inner-breeze.app" class="cta">Explore Now!</a>
+                <a href="https://inbreeze.xyz" class="cta">Explore Now!</a>
             </div>
         </div>
     </div>
