--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
         <p>&copy; 2024 NaoX</p>
         <div class="social-links">
             <a href="mailto:contact@naox.io">Email</a>
-            <a href="https://www.instagram.com/naox_io">Instagram</a>
-            <a href="https://x.com/naox_io">𝕏</a>
+            <a href="https://ditto.pub/@naox@ditto.pub">Nostr</a>
+            <a href="https://x.com/naoxio_">𝕏</a>
             <a href="https://github.com/naoxio">GitHub</a>
             <a href="https://t.me/naoxio">Telegram</a>
         </div>
